force-app/main/default/objects/Order/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <description>Which brand the order belongs to (Kwitko Coffee / Bean & Brew). A dimension on the unified profile; the customer unifies across brands by Identity Resolution.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Kwitko Coffee</fullName><default>false</default><label>Kwitko Coffee</label></value>
            <value><fullName>Bean &amp; Brew</fullName><default>false</default><label>Bean &amp; Brew</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>