force-app/main/default/objects/Order/fields/Cancellation_Source__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Source__c</fullName>
    <label>Cancellation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Chat Agent</fullName><default>false</default><label>Chat Agent</label></value>
            <value><fullName>Customer</fullName><default>false</default><label>Customer</label></value>
            <value><fullName>Admin</fullName><default>false</default><label>Admin</label></value>
            <value><fullName>System</fullName><default>false</default><label>System</label></value>
            <value><fullName>WooCommerce</fullName><default>false</default><label>WooCommerce</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>