force-app/main/default/objects/Order/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <label>Cancelled By</label>
    <type>Text</type>
    <length>255</length>
    <description>Who cancelled this order (agent/user name, customer email, or system) — traceability.</description>
</CustomField>