force-app/main/default/objects/Order/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <label>Cancelled Date</label>
    <type>DateTime</type>
    <description>When the cancellation was executed.</description>
</CustomField>