force-app/main/default/objects/Order/fields/Carrier__c.field-meta.xml
<CustomField><fullName>Carrier__c</fullName><label>Carrier</label><type>Text</type><length>100</length><required>false</required></CustomField>