force-app/main/default/objects/Order/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <type>Text</type>
    <length>100</length>
    <description>Coupon code redeemed on this order (from Woo). Proper Coupon lookup added in Phase 6/7.</description>
</CustomField>