force-app/main/default/objects/Order/fields/Date_Paid__c.field-meta.xml
<CustomField><fullName>Date_Paid__c</fullName><label>Date Paid</label><type>DateTime</type><required>false</required></CustomField>