force-app/main/default/objects/Order/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <description>Shipping/fulfillment lifecycle (separate from the restricted standard Status). Drives cancel/return eligibility.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Shipped</fullName><default>true</default><label>Not Shipped</label></value>
            <value><fullName>Processing</fullName><default>false</default><label>Processing</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>In Transit</fullName><default>false</default><label>In Transit</label></value>
            <value><fullName>Out for Delivery</fullName><default>false</default><label>Out for Delivery</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Returned</fullName><default>false</default><label>Returned</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>Refunded</fullName><default>false</default><label>Refunded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>