force-app/main/default/objects/Order/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <label>Last Status Change</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent Fulfillment_Status__c change.</description>
</CustomField>