force-app/main/default/objects/Order/fields/Last_Woo_Sync__c.field-meta.xml
<CustomField><fullName>Last_Woo_Sync__c</fullName><label>Last Woo Sync</label><type>DateTime</type><required>false</required></CustomField>