force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet><restricted>false</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
        <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
        <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        <value><fullName>Refunded</fullName><default>false</default><label>Refunded</label></value>
        <value><fullName>Partially Refunded</fullName><default>false</default><label>Partially Refunded</label></value>
    </valueSetDefinition></valueSet>
    <description>Payment status synced from WooCommerce.</description>
</CustomField>