force-app/main/default/objects/Order/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <description></description>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>