force-app/main/default/objects/Order/fields/Status_Note__c.field-meta.xml
<CustomField>
    <fullName>Status_Note__c</fullName>
    <label>Status Note</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Human-readable note on the latest status change (who/why) for service-agent grounding.</description>
</CustomField>