force-app/main/default/objects/Order/fields/Tracking_Number__c.field-meta.xml
<CustomField><fullName>Tracking_Number__c</fullName><label>Tracking Number</label><type>Text</type><length>120</length><required>false</required></CustomField>