force-app/main/default/objects/Order/fields/Tracking_Url__c.field-meta.xml
<CustomField><fullName>Tracking_Url__c</fullName><label>Tracking URL</label><type>Url</type><required>false</required></CustomField>