force-app/main/default/objects/Order/fields/Woo_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Order_Id__c</fullName>
    <label>Woo Order Id</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>WooCommerce order ID.</description>
</CustomField>