force-app/main/default/objects/Order/fields/Woo_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Woo_Order_Total__c</fullName>
    <label>Woo Order Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>The WooCommerce grand total (incl. shipping/tax) — the figure the customer sees on the storefront. Standard TotalAmount is the product subtotal only.</description>
    <inlineHelpText>WooCommerce grand total incl. shipping; what the customer sees.</inlineHelpText>
</CustomField>