force-app/main/default/objects/Order/fields/Woo_Status__c.field-meta.xml
<CustomField><fullName>Woo_Status__c</fullName><label>Woo Status</label><type>Text</type><length>40</length><required>false</required><description>Raw WooCommerce order status (processing/completed/cancelled/refunded/on-hold/failed).</description></CustomField>